fix: avatar adding, component disposition

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -213,8 +213,11 @@
     "buttonText": "Log in"
   },
   "editProfilePage": {
-    "rolePlaceholder": "Select Role",
+    "roleLabel": "I am acting as",
+    "rolePlaceholder": "Please select",
+    "phonePlaceholder": "(000) 000-0000",
     "countryPlaceholder": "Country",
+    "agencyPlaceholder": "Foxtons UK ltd",
     "pageTitle": "Edit profile",
     "backLink": "Back to Profile",
     "updateText": "Profile updated successfully!",
@@ -222,20 +225,23 @@
     "nameMessage": "Latin letters, spaces, 2-50 characters",
     "phoneMessage": "Phone number is not valid",
     "roleMessage": "Role is required",
-    "cityMessage": "Role is required",
+    "cityMessage": "City is required",
+    "avatarMessage": "Avatar is required",
+    "cityPlaceholder": "Enter the city where you operate",
     "countryMessage": "Country is required",
     "helperText": "Allowed *.jpeg, *.jpg, *.png, *.gif",
     "helperSubText": " max size of ",
     "delBtnTxt": "Delete Profile",
     "nameLabel": "Name",
     "emailLabel": "Email",
-    "phoneNumLabel": "Phone Number",
-    "companyLabel": "Agency",
+    "phoneNumLabel": "Phone number",
+    "companyLabel": "Agency name",
     "cancelBtnTxt": "Cancel",
     "saveBtnTxt": "Save Changes",
     "update": "Change photo",
     "upload": "Upload photo",
-    "aboutLabel": "About",
+    "aboutLabel": "About me",
+    "aboutPlaceholder": "I used to be an MI5 agent but I messed up my secrect misssion so now I work as property agent",
     "city": "City",
     "changePass": "Change password",
     "deleteProfile": "Delete profile",
