--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -328,5 +328,20 @@
     "sale_agreed": "Sale agreed",
     "sold_subject_to_contract": "Sold subject to contract",
     "under_offer": "Under offer"
+  },
+  "property": {
+    "title": "Property details",
+    "map": "View on map",
+    "slider": "View more",
+    "leads": "View leads",
+    "for_sale": "For Sale",
+    "for_rent": "For Rent",
+    "for_sale_and_rent": "For Sale and Rent",
+    "for_management": "For Management",
+    "for_auction": "For Auction",
+    "null": "",
+    "": "",
+    "since": "Days on the market",
+    "floors": "Floor area"
   }
 }
