--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -331,7 +331,7 @@
   },
   "property": {
     "title": "Property details",
-    "map": "View on map",
+    "maps": "View on map",
     "slider": "View more",
     "leads": "View leads",
     "for_sale": "For Sale",
