feat: added remove avatar button

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -250,6 +250,7 @@
     "companyLabel": "Agency name",
     "cancelBtnTxt": "Cancel",
     "saveBtnTxt": "Save Changes",
+    "deleteAvatarBtnTxt": "Delete avatar",
     "update": "Change photo",
     "upload": "Upload photo",
     "aboutLabel": "About me",
