fix(edit-profile): correct validation, add char counter, add corrections

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -213,17 +213,17 @@
     "buttonText": "Log in"
   },
   "editProfilePage": {
-    "roleLabel": "I am acting as",
+    "roleLabel": "* I am acting as",
     "rolePlaceholder": "Please select",
     "phonePlaceholder": "(000) 000-0000",
-    "countryPlaceholder": "Country",
+    "countryPlaceholder": "* Country",
     "agencyPlaceholder": "Foxtons UK ltd",
     "pageTitle": "Edit profile",
     "backLink": "Back to Profile",
     "updateText": "Profile updated successfully!",
     "errorText": "Something went wrong!",
     "nameMessage": "Latin letters, spaces, 2-50 characters",
-    "phoneMessage": "Phone number is not valid",
+    "phoneMessage": "The telephone number can have a maximum of 15 digits",
     "roleMessage": "Role is required",
     "cityMessage": "City is required",
     "avatarMessage": "Avatar is required",
@@ -233,8 +233,8 @@
     "helperSubText": " max size of ",
     "delBtnTxt": "Delete Profile",
     "nameLabel": "Name",
-    "emailLabel": "Email",
-    "phoneNumLabel": "Phone number",
+    "emailLabel": "* Email",
+    "phoneNumLabel": "* Phone number",
     "companyLabel": "Agency name",
     "cancelBtnTxt": "Cancel",
     "saveBtnTxt": "Save Changes",
@@ -242,7 +242,7 @@
     "upload": "Upload photo",
     "aboutLabel": "About me",
     "aboutPlaceholder": "I used to be an MI5 agent but I messed up my secrect misssion so now I work as property agent",
-    "city": "City",
+    "city": "* City",
     "changePass": "Change password",
     "deleteProfile": "Delete profile",
     "recieveNotifications": "Recieve push notifications ",
@@ -258,10 +258,13 @@
     "pressing": "Pressing ",
     "delBold": "Delete my Profile",
     "delTxt2": " button will permanently delete your Profile. You will lose all your Profile data!",
-    "confirmDelBtnTxt": "Delete my Profile",
+    "confirmDelBtnTxt": "I want to delete my Profile",
     "roleAgent": "Agent",
     "roleAgency": "Agency",
-    "fetchErr": "Error fetching user data"
+    "fetchErr": "Error fetching user data",
+    "aboutMatchText": "Latin letters and numbers, commas, periods, hyphens, spaces, up to 300 characters",
+    "agencyMatchText": "Latin letters, numbers, commas, periods, hyphens, 2-30 character",
+    "cityMatchText": "Latin letters, numbers, commas, periods, hyphens, 2-50 characters"
   },
   "profilePage": {
     "tabProfile": "Profile",
