--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -327,7 +327,8 @@
     "exchange": "Exchange",
     "sale_agreed": "Sale agreed",
     "sold_subject_to_contract": "Sold subject to contract",
-    "under_offer": "Under offer"
+    "under_offer": "Under offer",
+    "error": "Something went wrong!"
   },
   "property": {
     "title": "Property details",
@@ -356,6 +357,32 @@
     "tenure": "Tenure",
     "community": "Community",
     "address": "Address",
-    "operation": "Operation"
+    "operation": "Operation",
+    "error": "Something went wrong!",
+    "autonomous_heating_system": "Autonomous",
+    "central_heating": "Central",
+    "none": "None",
+    "electricity": "Electrycity",
+    "reception": "Reception",
+    "water": "Water",
+    "air": "Air Condition",
+    "alarm": "Alarm",
+    "fireplace": "Fire Place",
+    "smart": "Smart Home",
+    "storage": "Storage Space",
+    "heating": "Heating type",
+    "parking": "Parking",
+    "verandas": "Verandas",
+    "seaView": "Sea View",
+    "mountainView": "Mountain View",
+    "privateSwimmingPool": "Private Swimming Pool",
+    "commonSwimmingPool": "Common Swimming Pool",
+    "elevator": "Elevator",
+    "bedrooms": "Bedrooms",
+    "bathrooms": "Bathrooms",
+    "livingrooms": "Livingrooms",
+    "kitchenType": "Kitchen Type",
+    "petsAllowed": "Pets Allowed",
+    "petsNotAllowed": "Pets Not Allowed"
   }
 }
