--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -284,7 +284,7 @@
     "roleAgency": "Agency",
     "fetchErr": "Error fetching user data",
     "success": "User deleted successfully!",
-    "error": "Something went wrong!"
+    "error": "Something went wrong!",
     "aboutMatchText": "Latin letters and numbers, commas, periods, hyphens, spaces, up to 300 characters",
     "agencyMatchText": "Latin letters, numbers, commas, periods, hyphens, 2-30 character",
     "cityMatchText": "Latin letters, numbers, commas, periods, hyphens, 2-50 characters"
