--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -355,5 +355,11 @@
         }
       }
     }
+  },
+  "leadDetailsPage": {
+    "title": "Lead Details",
+    "status": "Status",
+    "matchingProperties": "Matching properties",
+    "removeLead": "Remove lead"
   }
 }
