feat: added rahge fields to form

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -368,7 +368,7 @@
   "CreateLeadPage": {
     "mainTitle": "Add lead",
     "offeringTypeLabel": "* Offering type",
-    "offeringTypePlaceholder": "For sale",
+    "offeringTypePlaceholder": "Choose one option",
     "offerTypeBuy": "For buy",
     "offerTypeSale": "For sale",
     "offerTypeRent": "For rent",
@@ -376,7 +376,7 @@
     "offerTypeBuy&Rent": "For buy and rent",
     "offerTypeManage": "For manage",
     "enquiryTypeLabel": "* Looking for",
-    "enquiryTypePlaceholder": "Apartment",
+    "enquiryTypePlaceholder": "Choose one option",
     "enquiryTypeHouse": "House",
     "enquiryTypeApartment": "Apartment",
     "enquiryTypeLand": "Land",
@@ -393,10 +393,16 @@
     "descriptionLabel": "Description (optional)",
     "descriptionPlaceholder": "Write some here",
     "countOfBedroomsLabel": "Miminum number of bedrooms (optional)",
-    "countOfBedroomsPlaceholder": "3",
+    "countOfBedroomsPlaceholder": "Choose one option",
     "totalAreaLabel": "Floor area  sq.ft. (optional)",
-    "totalAreaFromPlaceHolder": "0",
-    "totalAreaToPlaceHolder": "100",
+    "totalAreaFromPlaceHolder": "Min",
+    "totalAreaToPlaceHolder": "Max",
+    "priceRahgeRentLabel": "* Price range",
+    "priceRahgeRentFromPlaceholder": "Min",
+    "priceRahgeRentToPlaceholder": "Max",
+    "priceRahgeSellLabel": "* Price range",
+    "priceRahgeSellFromPlaceholder": "Min",
+    "priceRahgeSellToPlaceholder": "Max",
     "submitButton": "Add lead",
     "generalErrorMessage": "Something went wrong, please try again"
   },
