--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -454,7 +454,7 @@
     "direct": "Direct",
     "agent": "Agent",
     "qoetix": "Qoetix",
-    "null": "",
+    "null": "No information",
     "new": "New",
     "assigned": "Assigned",
     "contact_made": "Contact Made",
