--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -481,6 +481,7 @@
     "created": "Created",
     "budget": "Budget & Necessities",
     "buyRent": "Buy / Rent",
-    "enquiryType": "Enquiry Type"
+    "enquiryType": "Enquiry Type",
+    "features": "Main Features"
   }
 }
