--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -471,6 +471,8 @@
     "phone": "Phone",
     "email": "Email",
     "status": "Status",
-    "filtered": "Filtered for the: "
+    "filtered": "Filtered for the: ",
+    "none": "None",
+    "inputPlaceholder": "Enter lead name..."
   }
 }
