--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -471,6 +471,10 @@
     "phone": "Phone",
     "email": "Email",
     "status": "Status",
-    "filtered": "Filtered for the: "
+    "filtered": "Selected property",
+    "none": "None",
+    "inputPlaceholder": "Enter lead name...",
+    "sorry": "Sorry, No Matched Results Found!",
+    "try": "Try to find something else."
   }
 }
