--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -477,11 +477,16 @@
     "title": "Lead Details",
     "status": "Status",
     "matchingProperties": "Matching properties",
-    "removeLead": "Remove lead",
+    "deleteLead": "Delete lead",
     "created": "Created",
     "budget": "Budget & Necessities",
     "buyRent": "Buy / Rent",
     "enquiryType": "Enquiry Type",
-    "features": "Main Features"
+    "features": "Main Features",
+    "modalTitle": "Do you want to delete the Lead?",
+    "modalMainText1": "By clicking the button ",
+    "modalMainText2": " you confirm that you want to delete the Lead",
+    "cancelButton": "Cancel",
+    "generalErrorMessage": "Something went wrong, please try again"
   }
 }
