--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -486,5 +486,10 @@
     "description": "Description",
     "sourceDetails": "Source Details",
     "source": "Source"
+  },
+  "notFoundView": {
+    "notFound": " Sorry, Page Not Found!",
+    "home": "Go to Home",
+    "message": "Sorry, we couldn’t find the page you’re looking for. Perhaps you’ve mistyped the URL? Be sure to check your spelling."
   }
 }
