feat: add modal

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -517,7 +517,34 @@
     "outbound": "Outbound",
     "inbound": "Inbound",
     "outgoing": "Outgoing",
-    "incoming": "Incoming"
+    "incoming": "Incoming",
+    "register": "Lead was registered as New in AgentWise",
+    "contact": "Contact was registered in AgentWise",
+    "call": "call",
+    "email_from": "email from",
+    "to": "to",
+    "Viewing": "Viewing",
+    "SMS from": "SMS from",
+    "status_changed": "Lead changed status from",
+    "New_task": "New task",
+    "task": "task",
+    "status_from": "changed status from",
+    "added": "added",
+    "assigned": "Assigned",
+    "contact_made": "Contact Made",
+    "viewing": "Viewing",
+    "proposal": "Proposal",
+    "negotiation": "Negotiation",
+    "asleep": "Asleep",
+    "closed_won": "Closed Won",
+    "closed_lost": "Closed Lost",
+    "informative": "Informative",
+    "feedback": "Feedback",
+    "stalled": "Stalled",
+    "closed": "Closed",
+    "history": "Activities History",
+    "date": "Date & Time",
+    "activity": "Activity"
   },
   "notFoundView": {
     "notFound": " Sorry, Page Not Found!",
