feat: add comp styling

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -544,7 +544,8 @@
     "closed": "Closed",
     "history": "Activities History",
     "date": "Date & Time",
-    "activity": "Activity"
+    "activity": "Activity",
+    "open_history": "View History"
   },
   "notFoundView": {
     "notFound": " Sorry, Page Not Found!",
