fix: lint types & add buttonclose comp

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -492,7 +492,8 @@
     "inputPlaceholder": "Enter lead name...",
     "sorry": "Sorry, No Matched Results Found!",
     "try": "Try to find something else.",
-    "reset": "Reset all filters"
+    "reset": "Reset all filters",
+"leads": "leads"
   },
   "leadDetailsPage": {
     "title": "Lead Details",
