--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -577,7 +577,7 @@
     "sortOptionLatest": "Latest",
     "sortOptionOldest": "Oldest",
     "sortOptionNameIncrease": "Name: A-Z",
-    "sortOptionNameDecrease": "Name: Z-A"
+    "sortOptionNameDecrease": "Name: Z-A",
     "message": "Sorry, we couldn’t find the page you’re looking for. Perhaps you’ve mistyped the URL? Be sure to check your spelling.",
     "filtered": "Selected property",
     "none": "None",
