feat: create comp

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -532,6 +532,7 @@
     "sortOptionLatest": "Latest",
     "sortOptionOldest": "Oldest",
     "sortOptionNameIncrease": "Name: A-Z",
-    "sortOptionNameDecrease": "Name: Z-A"
+    "sortOptionNameDecrease": "Name: Z-A",
+    "unread": "unread messages"
   }
 }
