feat: added locations field

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -216,17 +216,7 @@
     "noCode": "Don't have a code?",
     "return": "Return",
     "timeRemaining": "The code expires in: {remainingTime} seconds",
-    "resendCodeButtonExpired": "Resend code",
-    "ErrorMessage": "Something went wrong, please try again",
-    "sentCode": "Verification code sent successfully",
-    "codeExpired": "Code is expired",
-    "emailVerified": "Email verified successfully",
-    "notValid": "Please enter the security code",
-    "ErrorMessage":"Something went wrong, please try again",
-    "sentCode":"Verification code sent successfully",
-    "codeExpired":"Code is expired",
-    "emailVerified":"Email verified successfully",
-    "notValid":"Please enter the security code"
+    "resendCodeButtonExpired": "Resend code"
   },
   "yup": {
     "code_too_short": "Code must be at least 6 characters",
@@ -398,17 +388,35 @@
     "offerTypeManage": "For manage",
     "enquiryTypeLabel": "* Looking for",
     "enquiryTypePlaceholder": "Choose one option",
-    "enquiryTypeHouse": "House",
     "enquiryTypeApartment": "Apartment",
-    "enquiryTypeLand": "Land",
-    "enquiryTypeRetail": "Retail",
-    "enquiryTypeOffice": "Office",
+    "enquiryTypeCondo": "Condominium",
+    "enquiryTypeLand": "Unimproved Land",
+    "enquiryTypeManufactured": "Manufactured Home",
+    "enquiryTypeMultiFamily": "Multi Family",
+    "enquiryTypeSingleFamily": "Single Family Residence",
+    "enquiryTypeTownhouse": "Townhouse",
+    "enquiryTypeAgriculture": "Agriculture",
+    "enquiryTypeBoatSlip": "Boat Slip",
+    "enquiryTypeBusiness": "Business",
+    "enquiryTypeCabin": "Cabin",
+    "enquiryTypeDeededParking": "Deeded Parking",
+    "enquiryTypeDuplex": "Duplex",
+    "enquiryTypeFarm": "Farm",
+    "enquiryTypeHotelMotel": "Hotel/Motel",
     "enquiryTypeIndustrial": "Industrial",
-    "enquiryTypeInvestment": "Investment",
-    "enquiryTypeBuilding": "Building",
-    "enquiryTypeParking": "Parking Lot",
-    "enquiryTypeHotel": "Hotel",
-    "enquiryTypeOther": "Other",
+    "enquiryTypeManufacturedOnLand": "Manufactured On Land",
+    "enquiryTypeMixedUse": "Mixed Use",
+    "enquiryTypeMobileHome": "Mobile Home",
+    "enquiryTypeMobileHomePark": "Mobile Home Park",
+    "enquiryTypeOffice": "Office",
+    "enquiryTypeOwnYourOwn": "Own Your Own",
+    "enquiryTypeQuadruplex": "Quadruplex",
+    "enquiryTypeRanch": "Ranch",
+    "enquiryTypeRetail": "Retail",
+    "enquiryTypeStockCooperative": "Stock Cooperative",
+    "enquiryTypeTimeshare": "Timeshare",
+    "enquiryTypeTriplex": "Triplex",
+    "enquiryTypeWarehouse": "Warehouse",
     "leadSourceLabel": "Lead source (optional)",
     "leadSourcePlaceholder": "Write some here",
     "descriptionLabel": "Description (optional)",
@@ -425,6 +433,8 @@
     "priceRahgeSellFromPlaceholder": "Min",
     "priceRahgeSellToPlaceholder": "Max",
     "submitButton": "Add lead",
+    "locationsLabel": "Location (optional)",
+    "locationsPlaceholder": "Location search",
     "generalErrorMessage": "Something went wrong, please try again"
   },
   "properties": {
