feat(chat): add private chat page UI and preliminary functionality with mock data

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -533,5 +533,10 @@
     "sortOptionOldest": "Oldest",
     "sortOptionNameIncrease": "Name: A-Z",
     "sortOptionNameDecrease": "Name: Z-A"
+  },
+  "privateChat": {
+    "title": "Chat",
+    "placeholder": "Type a message",
+    "errMsg": "Something went wrong!"
   }
 }
