--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -644,7 +644,16 @@
     "sortOptionLatest": "Latest",
     "sortOptionOldest": "Oldest",
     "sortOptionNameIncrease": "Name: A-Z",
-    "sortOptionNameDecrease": "Name: Z-A"
+    "sortOptionNameDecrease": "Name: Z-A",
+    "addToChat": "Add to chat",
+    "cancelBtnTxt": "Cancel",
+    "addGroupChat": "Add group chat",
+    "addGroupBtnTxt": "Add group chat",
+    "groupNameInputPlaceholder": "Enter agent name",
+    "groupNameLabel": "Enter group name",
+    "groupNameInvalid": "Group name invalid",
+    "groupNameRequired": "Group name required",
+    "btnDeleteAgentFromList": "Remove agent from group"
   },
   "privateChat": {
     "title": "Chat",
