fix: add bug fixes and style enhancements

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -292,7 +292,7 @@
     "delTitle": "Do you want to delete Profile?",
     "delTxt": "Pressing Delete my Profile button will permanently delete your Profile. You will lose all your Profile data!",
     "pressing": "Pressing ",
-    "delBold": "Delete my Profile",
+    "delBold": "I want to delete my Profile",
     "delTxt2": " button will permanently delete your Profile. You will lose all your Profile data!",
     "confirmDelBtnTxt": "I want to delete my Profile",
     "roleAgent": "Agent",
@@ -528,6 +528,7 @@
   },
   "leads": {
     "": "",
+    "addBtnTxt": "Add lead",
     "direct": "Direct",
     "agent": "Agent",
     "qoetix": "Qoetix",
@@ -549,8 +550,8 @@
     "email": "Email",
     "status": "Status",
     "filtered": "Selected property",
-    "none": "None",
-    "inputPlaceholder": "Enter lead name...",
+    "none": "All",
+    "inputPlaceholder": "Lead name",
     "sorry": "Sorry, No Matched Results Found!",
     "try": "Try to find something else.",
     "reset": "Reset all filters",
@@ -559,10 +560,10 @@
   "agents": {
     "pageTitle": "Agent network",
     "chatSectionTitle": "Chats",
-    "noNotifications": "No new notifications",
+    "noNotifications": "All messages read",
     "view": "View",
     "agents": "Agents",
-    "searchPlaceholder": "Search agents...",
+    "searchPlaceholder": "Search agent by name...",
     "noNotificationsLabel": "no notifications",
     "more99": "more than 99 notifications",
     "notifications": "notifications"
