fix: add bug fixes and style enhancements

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -555,7 +555,8 @@
     "sorry": "Sorry, No Matched Results Found!",
     "try": "Try to find something else.",
     "reset": "Reset all filters",
-    "leads": "leads"
+    "leads": "leads",
+    "all": "All"
   },
   "agents": {
     "pageTitle": "Agent network",
