chore: add minor corrections

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -292,9 +292,9 @@
     "delTitle": "Do you want to delete Profile?",
     "delTxt": "Pressing Delete my Profile button will permanently delete your Profile. You will lose all your Profile data!",
     "pressing": "Pressing ",
-    "delBold": "I want to delete my Profile",
+    "delBold": "Delete my Profile",
     "delTxt2": " button will permanently delete your Profile. You will lose all your Profile data!",
-    "confirmDelBtnTxt": "I want to delete my Profile",
+    "confirmDelBtnTxt": "Delete my Profile",
     "roleAgent": "Agent",
     "roleAgency": "Agency",
     "fetchErr": "Error fetching user data",
