fix: change agentwize to zenbitrock

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -602,8 +602,8 @@
     "inbound": "Inbound",
     "outgoing": "Outgoing",
     "incoming": "Incoming",
-    "register": "Lead was registered as New in AgentWise",
-    "contact": "Contact was registered in AgentWise",
+    "register": "Lead was registered as New in ZenBitRock",
+    "contact": "Contact was registered in ZenBitRock",
     "call": "call",
     "email_from": "email from",
     "to": "to",
