feat: add delete chat modal

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -658,7 +658,23 @@
     "groupNameInvalid": "Group name must contains 10 symbols minimum",
     "groupNameRequired": "Group name required",
     "btnDeleteAgentFromList": "Remove agent from group",
-    "groupName": "Group name:"
+    "groupName": "Group name:",
+    "Chat members": "Chat members",
+    "Delete chat": "Delete chat",
+    "Add agents to chat": "Add agents to chat",
+    "Created on": "Created on",
+    "owner": "owner",
+    "Group members": "Group members",
+    "Edit group name": "Edit group name",
+    "Chat name": "Chat name",
+    "title": "Chat info",
+    "back": "Back",
+    "Do you want delete chat?": "Do you want delete chat?",
+    "Yes delete": "Yes delete",
+    "Something went wrong": "Something went wrong",
+    "Edit group chat name": "Edit group chat name",
+    "Enter new name": "Enter new name",
+    "Change group chat name": "Change group chat name"
   },
   "privateChat": {
     "title": "Chat",
