fix: change font size & refetch leads with empty filter

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -560,7 +560,8 @@
     "sorry": "Sorry, No Matched Results Found!",
     "try": "Try to find something else.",
     "reset": "Reset all filters",
-    "leads": "leads"
+    "leads": "leads",
+    "error": "Something went wrong!"
   },
   "agents": {
     "pageTitle": "Agent network",
