chore: add style corrections

--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -530,6 +530,7 @@
   },
   "leads": {
     "": "",
+    "results": "Filtered results",
     "addBtnTxt": "Add lead",
     "direct": "Direct",
     "agent": "Agent",
