--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -659,22 +659,22 @@
     "groupNameRequired": "Group name required",
     "btnDeleteAgentFromList": "Remove agent from group",
     "groupName": "Group name:",
-    "Chat members": "Chat members",
-    "Delete chat": "Delete chat",
-    "Add agents to chat": "Add agents to chat",
-    "Created on": "Created on",
+    "chatMembers": "Chat members",
+    "deleteChat": "Delete chat",
+    "addAgentsToChat": "Add agents to chat",
+    "createdOn": "Created on",
     "owner": "owner",
-    "Group members": "Group members",
-    "Edit group name": "Edit group name",
-    "Chat name": "Chat name",
+    "groupMembers": "Group members",
+    "editGroupName": "Edit group name",
+    "chatName": "Chat name",
     "title": "Chat info",
     "back": "Back",
-    "Do you want delete chat?": "Do you want delete chat?",
-    "Yes delete": "Yes delete",
-    "Something went wrong": "Something went wrong",
-    "Edit group chat name": "Edit group chat name",
-    "Enter new name": "Enter new name",
-    "Change group chat name": "Change group chat name"
+    "doYouWantDeleteChat": "Do you want delete chat?",
+    "yesDelete": "Yes delete",
+    "somethingWentWrong": "Something went wrong",
+    "editGroupChatName": "Edit group chat name",
+    "enterNewName": "Enter new name",
+    "changeGroupChatName": "Change group chat name"
   },
   "privateChat": {
     "title": "Chat",
