--- a/src/locales/langs/en.json
+++ b/src/locales/langs/en.json
@@ -665,8 +665,7 @@
     "groupNameRequired": "Group name required",
     "btnDeleteAgentFromList": "Remove agent from group",
     "groupName": "Group name:",
-    "results": "Chats found with"
-    "groupName": "Group name:",
+    "results": "Chats found with",
     "chatMembers": "Chat members",
     "deleteChat": "Delete chat",
     "addAgentsToChat": "Add agents to chat",
